apps/wealth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wealth-service
  namespace: wealth-service
  labels:
    app.kubernetes.io/name: wealth-service
    app.kubernetes.io/instance: wealth-service
    app.kubernetes.io/component: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: wealth-service
      app.kubernetes.io/instance: wealth-service

  template:
    metadata:
      labels:
        app.kubernetes.io/name: wealth-service
        app.kubernetes.io/instance: wealth-service
        app.kubernetes.io/component: backend

    spec:
      imagePullSecrets:
        - name: ghcr

      containers:
        - name: wealth-service
          image: ghcr.io/pestana1213/wealth-service

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"
