apps/wealth-service/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wealth-service-postgres
  namespace: wealth-service
  labels:
    app: wealth-service-postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wealth-service-postgres

  template:
    metadata:
      labels:
        app: wealth-service-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17

          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: wealth-service-postgres
