apps/wealth-service/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealth-service-postgres
  namespace: wealth-service
spec:
  selector:
    app: wealth-service-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
