apps/wealth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealth-service
  namespace: wealth-service
  labels:
    app.kubernetes.io/name: wealth-service
    app.kubernetes.io/instance: wealth-service
spec:
  selector:
    app.kubernetes.io/name: wealth-service
    app.kubernetes.io/instance: wealth-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
