apps/wealth-service/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealth-frontend
  namespace: wealth-service
  labels:
    app.kubernetes.io/name: wealth-frontend
    app.kubernetes.io/instance: wealth-frontend
spec:
  selector:
    app.kubernetes.io/name: wealth-frontend
    app.kubernetes.io/instance: wealth-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
